--- a/script/requirements.txt
+++ b/script/requirements.txt
@@ -1,9 +1,15 @@
+contourpy==1.3.1
+cycler==0.12.1
 filelock==3.17.0
+fonttools==4.56.0
 fsspec==2025.2.0
 jinja2==3.1.5
+kiwisolver==1.4.8
 markupsafe==3.0.2
+matplotlib==3.10.0
 mpmath==1.3.0
 networkx==3.4.2
+numpy==2.2.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -17,7 +23,13 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+packaging==24.2
+pillow==11.1.0
+polars==1.23.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 setuptools==75.8.0
+six==1.17.0
 sympy==1.13.1
 torch==2.6.0
 triton==3.2.0
